RESOLVED FIXED115557
[Mac] setMetadataURL incorrectly treats path bytes as Latin-1
https://bugs.webkit.org/show_bug.cgi?id=115557
Summary [Mac] setMetadataURL incorrectly treats path bytes as Latin-1
Alexey Proskuryakov
Reported 2013-05-03 11:04:01 PDT
String(const char*) constructor is for Latin-1, but fileSystemRepresentation returns utf-8.
Attachments
proposed fix (1.32 KB, patch)
2013-05-03 11:10 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2013-05-03 11:10:11 PDT
Created attachment 200441 [details] proposed fix
WebKit Commit Bot
Comment 2 2013-05-03 13:56:05 PDT
Comment on attachment 200441 [details] proposed fix Clearing flags on attachment: 200441 Committed r149537: <http://trac.webkit.org/changeset/149537>
WebKit Commit Bot
Comment 3 2013-05-03 13:56:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.