[Mac] setMetadataURL incorrectly treats path bytes as Latin-1 https://bugs.webkit.org/show_bug.cgi?id=115557

Reviewed by Sam Weinig.

* platform/mac/FileSystemMac.mm: (WebCore::setMetaData): Use the correct constructor.


Canonical link: https://commits.webkit.org/134003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149537 268f45cc-cd09-0410-ab3c-d52691b4dbfc