Source/WebCore/platform/mac/FileSystemMac.mm
@@ -77,7 +77,7 @@ typedef struct MetaDataInfo
 static void* setMetaData(void* context)
 {
     MetaDataInfo *info = (MetaDataInfo *)context;
-    wkSetMetadataURL((NSString *)info->URLString, (NSString *)info->referrer, (NSString *)String(fileSystemRepresentation(info->path).data()));
+    wkSetMetadataURL((NSString *)info->URLString, (NSString *)info->referrer, (NSString *)String::fromUTF8(fileSystemRepresentation(info->path).data()));
     
     delete info;
     
